--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 # DATABASE
 
-DB_HOSTNAME=db4free.net
-DB_USERNAME=apirahman
-DB_PASSWORD=12345678
-DB_DATABASE=zwallet9
+DB_HOSTNAME=localhost
+DB_USERNAME=root
+DB_PASSWORD=
+DB_DATABASE=zwallet
 SECRET=apirahman08962821312
-
+PREFIX=/api/v1
+BASE_URL=http://localhost:3000
 # SERVER
-# PORT=3000
+PORT=3000
